--- a/pom.xml
+++ b/pom.xml
@@ -96,14 +96,14 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url>http://http://35.174.76.243:8081/repository/paypal-release//</url>
+	      <url>http://35.174.76.243:8081/repository/paypal-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http://http://35.174.76.243:8081/repository/paypal_snapshot//</url>
-	    </snapshotRepository>
+	      <url>http://35.174.76.243:8081/repository/paypal_snapshot/</url>
+		</snapshotRepository>
 	    
 	</distributionManagement>
 	
